--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -22,7 +22,7 @@
     "## Dataset User:\n",
     "#### Million Songs Dataset\n",
     "Source: http://labrosa.ee.columbia.edu/millionsong/ <br>\n",
-    "Paper: http://ismir2011.ismir.net/papers/OS6-1.pdf <br>\n",
+    "Paper: http://ismir2011.ismir.net/papers/OS6-1.pdf <br>\n"
    ]
   },
   {
